[gd_scene load_steps=8 format=3 uid="uid://cg81e08g227tf"]

[ext_resource type="Script" path="res://resources/player/combat_system.gd" id="1_q6nve"]
[ext_resource type="Texture2D" uid="uid://dr7n16rqykvn5" path="res://assets/FX/SlashFx/SlashCurved/SpriteSheet.png" id="2_pqenw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gvh3u"]
atlas = ExtResource("2_pqenw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0alct"]
atlas = ExtResource("2_pqenw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3xu5"]
atlas = ExtResource("2_pqenw")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5weyi"]
atlas = ExtResource("2_pqenw")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_d7v6b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvh3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0alct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3xu5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5weyi")
}],
"loop": false,
"name": &"circular_slice",
"speed": 8.0
}]

[node name="CombatSystem" type="Node2D" groups=["Danger"]]
script = ExtResource("1_q6nve")

[node name="RightHandWeaponSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
centered = false

[node name="Area2D" type="Area2D" parent="RightHandWeaponSprite"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightHandWeaponSprite/Area2D"]
disabled = true

[node name="Slice" type="AnimatedSprite2D" parent="RightHandWeaponSprite"]
modulate = Color(1, 1, 1, 0.752941)
z_index = -1
position = Vector2(1, -1)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_d7v6b")
animation = &"circular_slice"
frame = 2
frame_progress = 0.11211

[node name="LeftHandWeaponSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -1)
centered = false

[node name="Area2D" type="Area2D" parent="LeftHandWeaponSprite"]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftHandWeaponSprite/Area2D"]
disabled = true

[connection signal="body_entered" from="RightHandWeaponSprite/Area2D" to="." method="_on_area_2d_body_entered" binds= ["right"]]
[connection signal="body_entered" from="LeftHandWeaponSprite/Area2D" to="." method="_on_area_2d_body_entered" binds= ["left"]]
